implement semantic loss

--- a/EDA/EDA.ipynb
+++ b/EDA/EDA.ipynb
@@ -1479,7 +1479,7 @@
    "execution_count": 40,
    "outputs": [],
    "source": [
-    "data_clean.drop(['funded_amnt', 'funded_amnt_inv', 'emp_title', 'url', 'title', 'emp_length', 'issue_d', 'earliest_cr_line', 'last_pymnt_d', 'last_credit_pull_d'], axis=1, inplace=True)"
+    "data_clean.drop(['funded_amnt', 'funded_amnt_inv', 'emp_title', 'url', 'title', 'emp_length', 'issue_d', 'earliest_cr_line', 'last_pymnt_d', 'last_credit_pull_d', 'recoveries', 'collection_recovery_fee'], axis=1, inplace=True)"
    ],
    "metadata": {
     "collapsed": false,
@@ -1801,7 +1801,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 70,
+   "outputs": [],
+   "source": [
+    "data_clean.drop('collection_recovery_fee', axis=1, inplace=True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-05T16:26:45.566471600Z",
+     "start_time": "2024-04-05T16:26:45.296505500Z"
+    }
+   },
+   "id": "458106f5dca46f7"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "outputs": [],
    "source": [
     "data_clean.to_pickle('../data/clean_lc_data.pkl')"
@@ -1809,8 +1825,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-04T18:31:08.578607800Z",
-     "start_time": "2024-04-04T18:31:08.421710400Z"
+     "end_time": "2024-04-05T16:26:46.706356100Z",
+     "start_time": "2024-04-05T16:26:46.590932400Z"
     }
    },
    "id": "e6b24d90a6df139c"
